objects/Order_Hold_Badge_Mapping__mdt.object
<CustomObject>
    <description>Maps an order hold code and status description to a badge</description>
    <fields>
        <fullName>Badge__c</fullName>
        <label>Badge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Type__c</fullName>
        <label>Hold Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Description__c</fullName>
        <label>Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Order Hold - Badge Mapping</label>
    <pluralLabel>Order Hold - Badge Mappings</pluralLabel>
</CustomObject>